--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,82 @@
-Not implemented yet! 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <nav>
+      <ol>
+        <li class="crumb"><a href="./home.html">Home</a></li>
+        <li class="crumb"><a href="./profile.html">Profile</a></li>
+        <li class="crumb"><a href="./about.html">About</a></li>
+      </ol>
+    </nav>
+    <h1>Emmanuel Garzon</h1>
+    <figure id="headshot">
+      <img
+        src="https://ed.devmountain.com/media/students/Profile_Pic-EGARZON_6OmfF8Z.jpg"
+        alt="Headshot of Emmanuel Garzon"
+      />
+      <figcaption>
+        Emmanuel, pictured here, was recently released from a block of ice and
+        shortly after was quoted saying that "[He] will get [his] vengeance on
+        the Fire Nation."
+      </figcaption>
+    </figure>
+<hr>
+    <p>Skills:
+        <ul>
+            <li>Ninja Star Throwing</li>
+            <li>Catching stray flies in the house</li>
+            <li>Origami</li>
+        </ul>
+    </p>
+<hr>
+    <p>Interests: 
+        <ol>
+            <li>Stamp collecting</li>
+            <li>Bird watching</li>
+            <li>Antiquing on weekends</li>
+        </ol>
+    </p>
+<hr>
+<h2>Career Goals:</h2> 
+    <p>I want to be the very best, like no one ever was.</p>
+<p>To catch them is my real test, to train them is my cause.</p>
+<hr>
 
-<br>
-<br>
+<h2>Places I would like to visit:</h2>
+<div id="places">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Castlepatrasview.JPG/1024px-Castlepatrasview.JPG" alt="place-1" class="vac-spot">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Maison_Carr%C3%A9e_2.jpg/1024px-Maison_Carr%C3%A9e_2.jpg" alt="place-2" class="vac-spot">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Royal_Courts_of_Justice_%286201094569%29.jpg/1024px-Royal_Courts_of_Justice_%286201094569%29.jpg" alt="place-3" class="vac-spot">
 
-<a href="./home.html"><< Back </a>
+</div>
+<hr>
+<form>
+<p>Suggestions on how to better myself:</p>
+<input type="checkbox" id="perfect" value="perfect" />
+<label for="perfect">Good as you are</label>
+<input type="checkbox" id="hair" value="hair" />
+<label for="hair">Get a haircut</label>
+<input type="checkbox" id="beard" value="beard" />
+<label for="beard">Shave your beard</label>
+<p>Enter additional criticisms below:</p>
+<textarea name="comment-box" id="comment-box" placeholder="Be warned, it will likely go ignored." cols="30" rows="10"></textarea><br>
+<button type="submit">SUBMIT</button>
+</form>
+<hr>
+<p>Additional Info: (click to find out more!)</p>
+<button id="color" class="about-me-btns">My Favorite Color</button>
+<button id="place" class="about-me-btns">My Favorite Place</button>
+<button id="ritual" class="about-me-btns">My Favorite Ritual</button>
+    <footer>
+      <a href="./home.html"><< Back </a>
+    </footer>
+    <script src="./profile.js"></script>
+  </body>
+</html>
